Added local mathjax with bower.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,9 @@
     To get the total number of combos, you need to sum up all possible combos
 
     $$\sum_{i=0}^N \frac{N!}{k!(N-k)!}$$
-
+\[
+\frac{-b\pm\sqrt{b^2-4ac}}{2a}
+\]
 
     <form name='form'>
         <label>
