--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,14 @@
 <div class="row">
-    <p>This is a calculator for computing the number of possible combinations 
-        of beers</p>
-    It is a classic n choice k problem, where order doesn't matter.
+    
+    <dt>Original Question</dt>
+    <dd>If bier one has 15 beers on tap, how many possible "mixed beers" can you make by combining equal parts from any number of beers in the menu?</dd>
+    
+
+    <hr>
+    <dt>Solution</dt>
+    It is a classic <strong>N choice k problem</strong>, where order doesn't matter.
     <p>
-    Here is the formula used to compute the number of ways to mix k beers from N total possible beers, where order doesn't matter.
+    Here is the formula used to compute the number of ways to mix <strong>k</strong> beers from <strong>N</strong> total possible beers, where order doesn't matter.
     </p>
     
     $$\frac{N!}{k!(N-k)!}$$
@@ -16,19 +21,26 @@
     <p>
     To get the total number of combos, you need to sum up all possible combos
     </p>
-    $$\sum_{i=0}^N \frac{N!}{k!(N-k)!}$$
+    $$\sum_{k=1}^N \frac{N!}{k!(N-k)!} = \frac{15!}{1!(15-1)!} + \frac{15!}{2!(15-2)!} + ... + \frac{15!}{15!(15-15)!}$$
 
+    Note: by definition <strong>0! = 1</strong>
+    <hr>
+    <dt>Answer</dt>
     <form name='form'>
+        
         <label>
-          Number of beers: 
+          Number of beers on the menu: 
         <input type='number' ng-model='numBeers'>
         </label>
+        <div>Hint: Try adjusting the number of beers on the menu.
     </form>
     <h3>Total Combinations: {{totalCombos| number}}</h3>
 </div>
 
 
 <div class='row'>
-    <div ng-repeat='letter in letters.slice(0,numBeers)' >{{$index+1}} beer: {{combos(numBeers, $index+1) | number}}</div>
+    <div ng-repeat='letter in letters.slice(0,numBeers)' >{{$index+1}}   <ng-pluralize count="$index"
+                when="{'0': 'beer','1':'beers', 'other': 'beers'}">
+  </ng-pluralize>: {{combos(numBeers, $index+1) | number}}</div>
     
 </div>
